# SIMPLE

./: .gitignore  README.md  gif  pyproject.toml  test.spec
exp_database/empty_experiment/: Miappe_Template.xlsx
exp_database/empty_experiment/output/: miappe_template_filled.xlsx
exp_database/exemple_experiment/: Miappe_Template.xlsx
exp_database/exemple_experiment/output/: miappe_template_filled.xlsx
exp_database/experiment_1/: RGB1_Morpho_Manual.xlsx
exp_database/experiment_2/: Test_OSC_x_MIAPPE.xlsx
exp_database/experiment_2/00-yaml/: Sandbox-Guest-login.yaml
exp_database/experiment_3/: Test_OSC_x_MIAPPE.xlsx
exp_database/experiment_3/00-yaml/: ExpInfo.yaml  Factors.yaml  test_1.5.1.yaml
exp_database/experiment_4/00-RoundProtocol/: 121_5_2024-06-10_06-30-00_RoundProtocol.txt
exp_database/experiment_4/00-yaml/: Germplasm.yaml  Morpho_Info.yaml  UH-USERNAME-login.yaml
exp_database/test_JACOS/: Miappe_Template.xlsx  RGB1_Morpho_Manual.xlsx  Test_OSC_x_MIAPPE.xlsx
exp_database/test_JACOS/output/: Test_OSC_x_MIAPPE.xlsx
exp_database/test_JAQOS/: .~lock.Miappe_Template.xlsx#  .~lock.Miappe_Template_modified.xlsx#  Miappe_Template.xlsx  Miappe_Template_modified.xlsx
exp_database/test_JAQOS/00-RoundProtocol/: 121_2_2024-05-27_15-41-12_RoundProtocol.txt
exp_database/test_JAQOS/output/: miappe_template_filled.xlsx
exp_database/test_SIMPLE/00-RoundProtocol/: 121_11_2024-07-01_06-30-00_RoundProtocol.txt
exp_database/test_SIMPLE/output/: miappe_template_filled.xlsx
src/jacos/: auth.py  cli.py  data_import.py  experiment.py  images_import.py  ui.py
src/jaqos/: __main__.py  auth.py  cli.py  data_import.py  experiment.py  images_import.py  ui.py
src/simple/: __main__.py  auth.py  cli.py  data_import.py  experiment.py  images_import.py  ui.py
