[project]
name = "jaqos"
version = "0.10.0"
description = """JAQOS, a Command Line Interface coded in python with a focus on ease of use, rapidity and flexibility.
 This tool will ( I hope ) help researchers uppload MIAPPE compliant phenotyping data on OpenSilex instances."""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi==2026.5.20",
    "lxml==6.1.1",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "opensilexclienttoolspython",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "rich==15.0.0",
    "six==1.17.0",
    "urllib3==2.7.0",
]

[project.scripts]
jaqos = "jaqos.cli:main"

[tool.uv]
package = true

[tool.uv.sources]
opensilexclienttoolspython = { git = "https://github.com/OpenSILEX/opensilexClientToolsPython.git", rev = "e26032c2620ec0a142c0601f43b83566788c4a25" }

[tool.uv.workspace]
members = [
    "jaqos",
]
